Source/WebCore/accessibility/AccessibilityObject.h
@@ -95,6 +95,7 @@ enum AccessibilityRole {
     ApplicationAlertRole,
     ApplicationAlertDialogRole,
     ApplicationDialogRole,
+    ApplicationGroupRole,
     ApplicationLogRole,
     ApplicationMarqueeRole,
     ApplicationStatusRole,
